[package]
name = "tfs"
version = "0.1.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
description = "Fast, content-addressed, snapshottable filesystem."
repository = "https://github.com/terminalcloud/tfs"
documentation = "https://crates.fyi/crates/tfs/0.1.1"
license = "GPL-3.0+"

[lib]
name = "tfs"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "tfs"
path = "src/main.rs"
doctest = false

[dependencies]
scoped-pool = "0.1"
rand = "0.3"
uuid = "0.1"
libc = "0.2"
shared-mutex = "0.2"
terminal-linked-hash-map = "0.1"
crossbeam = "0.2"
slab = "0.1"
log = "0.3"
vec_map = "0.4"
variance = "0.1"
tiny-keccak = "1"
scopeguard = "0.1"

tfs-fuse-sys = { path = "tfs-fuse-sys", version = "0.1" }

# TODO: Move this back to dev-dependencies.
tempdir = "0.3"

[dev-dependencies]
tempfile = "2.0"

[features]
default = []
nightly = []

